Make tests run in Java 17