@@ -40,7 +40,7 @@
 			<url>https://repo.codemc.org/repository/maven-public</url>
 		</repository>
 
-		<!-- Essentials and FactionsUUID -->
+		<!-- FactionsUUID -->
 		<repository>
 			<id>enderzone-repo</id>
 			<url>https://ci.ender.zone/plugin/repository/everything/</url>
@@ -77,16 +77,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.0.0-M7</version>
 				<configuration>
-					<argLine>${jacocoArg} -Dfile.encoding=UTF-8 --illegal-access=warn</argLine>
 					<includes>
 						<include>**/*AllTests.java</include>
 					</includes>
-					<excludes>
-						<exclude>**/*DamageListenerTest.java</exclude>
-						<exclude>**/*onDeathTest.java</exclude>
-					</excludes>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -108,7 +103,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<dependencies>
 		<!-- Spigot API -->
 		<dependency>
@@ -130,7 +125,7 @@
 		<dependency>
 			<groupId>net.ess3</groupId>
 			<artifactId>EssentialsX</artifactId>
-			<version>2.17.1</version>
+			<version>2.18.2</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
@@ -144,7 +139,7 @@
 		<dependency>
 			<groupId>com.massivecraft</groupId>
 			<artifactId>Factions</artifactId>
-			<version>1.6.9.5-U0.6.4</version>
+			<version>1.6.9.5-U0.6.15</version>
 			<scope>provided</scope>
 			<optional>true</optional>
 			<exclusions>
@@ -162,6 +157,12 @@
 			<version>2.4.0-RC</version>
 			<scope>provided</scope>
 			<optional>true</optional>
+			<exclusions>
+				<exclusion>
+					<groupId>*</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- PlaceHolderAPI -->
@@ -230,15 +231,21 @@
 
 		<!-- Unit Tests -->
 		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-module-junit4</artifactId>
-			<version>${powermock.version}</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.9.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.powermock</groupId>
-			<artifactId>powermock-api-mockito2</artifactId>
-			<version>${powermock.version}</version>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-suite</artifactId>
+			<version>1.9.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>4.7.0</version>
 			<scope>test</scope>
 		</dependency>
 
